feat: add serverconf and SS identifiers entity classes (#2685)
* feat: add serverconf and SS identifiers entity classes

Refs: XRDDEV-2805

* fix: sonar qube issues fixes

Refs: XRDDEV-2805

* docs: minor fixes

Refs: XRDDEV-2805

* fix: sonar qube issues fixes

Refs: XRDDEV-2805

* fix: minor fixes

Refs: XRDDEV-2805

* fix: remove *Type from SS domain and Entity names

Refs: XRDDEV-2805

* fix: merge conflict fix

Refs: XRDDEV-2805

* fix: remove entity and mapper packages to serverconf-impl module

Refs: XRDDEV-2805

* fix: replace serverconf-core ref to common module

Refs: XRDDEV-2805