@@ -1,5 +1,6 @@
 /*
  * The MIT License
+ *
  * Copyright (c) 2019- Nordic Institute for Interoperability Solutions (NIIS)
  * Copyright (c) 2018 Estonian Information System Authority (RIA),
  * Nordic Institute for Interoperability Solutions (NIIS), Population Register Centre (VRK)
@@ -45,13 +46,17 @@ import org.niis.xroad.restapi.exceptions.ErrorDeviation;
 import org.niis.xroad.restapi.service.NotFoundException;
 import org.niis.xroad.restapi.service.ServiceException;
 import org.niis.xroad.restapi.util.FormatUtils;
+import org.niis.xroad.securityserver.restapi.dto.ServiceClient;
 import org.niis.xroad.securityserver.restapi.dto.ServiceClientAccessRightDto;
-import org.niis.xroad.securityserver.restapi.dto.ServiceClientDto;
 import org.niis.xroad.securityserver.restapi.repository.ClientRepository;
-import org.niis.xroad.serverconf.model.AccessRightType;
-import org.niis.xroad.serverconf.model.ClientType;
-import org.niis.xroad.serverconf.model.EndpointType;
-import org.niis.xroad.serverconf.model.LocalGroupType;
+import org.niis.xroad.serverconf.impl.entity.AccessRightEntity;
+import org.niis.xroad.serverconf.impl.entity.ClientEntity;
+import org.niis.xroad.serverconf.impl.entity.EndpointEntity;
+import org.niis.xroad.serverconf.impl.entity.LocalGroupEntity;
+import org.niis.xroad.serverconf.impl.entity.XRoadIdEntity;
+import org.niis.xroad.serverconf.impl.mapper.XRoadIdMapper;
+import org.niis.xroad.serverconf.model.AccessRight;
+import org.niis.xroad.serverconf.model.LocalGroup;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 
@@ -107,13 +112,13 @@ public class AccessRightService {
             throws ClientNotFoundException, AccessRightNotFoundException,
                    ServiceNotFoundException {
 
-        ClientType clientType = clientService.getLocalClientOrThrowNotFound(clientId);
+        ClientEntity clientEntity = clientService.getLocalClientEntityOrThrowNotFound(clientId);
 
-        EndpointType endpointType = endpointService.getBaseEndpointType(clientType, fullServiceCode);
+        EndpointEntity endpointEntity = endpointService.getBaseEndpointEntity(clientEntity, fullServiceCode);
 
-        addAuditData(clientId, subjectIds, endpointType.getServiceCode());
+        addAuditData(clientId, subjectIds, endpointEntity.getServiceCode());
 
-        deleteEndpointAccessRights(clientType, endpointType, subjectIds);
+        deleteEndpointAccessRights(clientEntity, endpointEntity, XRoadIdMapper.get().toSubjects(subjectIds));
     }
 
     /**
@@ -146,27 +151,26 @@ public class AccessRightService {
      * @throws AccessRightNotFoundException if at least one access right expected is not found
      */
     public void deleteEndpointAccessRights(Long endpointId, Set<? extends XRoadId> subjectIds)
-            throws EndpointNotFoundException,
-                   ClientNotFoundException, AccessRightNotFoundException {
+            throws EndpointNotFoundException, ClientNotFoundException, AccessRightNotFoundException {
 
-        ClientType clientType = clientRepository.getClientByEndpointId(endpointId);
-        EndpointType endpointType = endpointService.getEndpoint(endpointId);
-        deleteEndpointAccessRights(clientType, endpointType, subjectIds);
+        ClientEntity clientEntity = clientRepository.getClientByEndpointId(endpointId);
+        EndpointEntity endpointEntity = endpointService.getEndpointEntity(endpointId);
+        deleteEndpointAccessRights(clientEntity, endpointEntity, XRoadIdMapper.get().toSubjects(subjectIds));
     }
 
     /**
      * Remove access rights from one endpoint
-     * @param clientType
-     * @param endpointType
-     * @param subjectIds
+     * @param clientEntity clientEntity
+     * @param endpointEntity endpointEntity
+     * @param subjectIds subjectIds
      * @throws AccessRightNotFoundException if subjects did not have access rights that were attempted to be deleted
      */
-    private void deleteEndpointAccessRights(ClientType clientType,
-                                            EndpointType endpointType,
-                                            Set<? extends XRoadId> subjectIds)
+    private void deleteEndpointAccessRights(ClientEntity clientEntity,
+                                            EndpointEntity endpointEntity,
+                                            Set<XRoadIdEntity> subjectIds)
             throws AccessRightNotFoundException {
 
-        deleteEndpointAccessRights(clientType, Collections.singletonList(endpointType), subjectIds);
+        deleteEndpointAccessRights(clientEntity, Collections.singletonList(endpointEntity), subjectIds);
     }
 
     /**
@@ -176,27 +180,27 @@ public class AccessRightService {
      * Deleting access rights to multiple endpoints from multiple
      * subjects will probably not be used, but if it is, all endpoints have to exist for all subjects, otherwise
      * exception is thrown.
-     * @param clientType
-     * @param endpointTypes
-     * @param subjectIds
+     * @param clientEntity clientEntity
+     * @param endpointEntities endpointEntities
+     * @param subjectIds subjectIds
      * @throws AccessRightNotFoundException if subjects did not have access rights that were attempted to be deleted
      */
-    private void deleteEndpointAccessRights(ClientType clientType, List<EndpointType> endpointTypes,
-                                            Set<? extends XRoadId> subjectIds) throws AccessRightNotFoundException {
+    private void deleteEndpointAccessRights(ClientEntity clientEntity, List<EndpointEntity> endpointEntities,
+                                            Set<XRoadIdEntity> subjectIds) throws AccessRightNotFoundException {
 
-        for (EndpointType endpointType : endpointTypes) {
+        for (EndpointEntity endpointEntity : endpointEntities) {
             // check that all access rights exist and can be deleted
-            List<AccessRightType> accessRightsToBeRemoved = clientType.getAcl().stream()
-                    .filter(acl -> acl.getEndpoint().getId().equals(endpointType.getId())
+            List<AccessRightEntity> accessRightsToBeRemoved = clientEntity.getAccessRights().stream()
+                    .filter(acl -> acl.getEndpoint().getId().equals(endpointEntity.getId())
                             && subjectIds.contains(acl.getSubjectId()))
                     .toList();
             if (accessRightsToBeRemoved.size() != subjectIds.size()) {
                 throw new AccessRightNotFoundException("All local service client identifiers + "
                         + subjectIds
                         + " weren't found in the access rights list of the given client: "
-                        + clientType.getIdentifier());
+                        + clientEntity.getIdentifier());
             }
-            clientType.getAcl().removeAll(accessRightsToBeRemoved);
+            clientEntity.getAccessRights().removeAll(accessRightsToBeRemoved);
         }
     }
 
@@ -211,15 +215,15 @@ public class AccessRightService {
      * @param clientId
      * @param fullServiceCode
      * @param subjectIds
-     * @return List of {@link ServiceClientDto AccessRightHolderDtos}
-     * @throws ClientNotFoundException        exception
-     * @throws ServiceNotFoundException       if service with given fullServicecode, or the base endpoint for it,
-     *                                        was not found
-     * @throws DuplicateAccessRightException  exception
+     * @return List of {@link ServiceClient AccessRightHolderDtos}
+     * @throws ClientNotFoundException exception
+     * @throws ServiceNotFoundException if service with given fullServicecode, or the base endpoint for it,
+     * was not found
+     * @throws DuplicateAccessRightException exception
      * @throws ServiceClientNotFoundException if a service client (local group, global group, or system) matching given
-     *                                        subjectId did not exist
+     * subjectId did not exist
      */
-    public List<ServiceClientDto> addSoapServiceAccessRights(
+    public List<ServiceClient> addSoapServiceAccessRights(
             ClientId clientId,
             String fullServiceCode,
             Set<XRoadId.Conf> subjectIds) throws ClientNotFoundException,
@@ -227,14 +231,14 @@ public class AccessRightService {
                                                  DuplicateAccessRightException,
                                                  ServiceClientNotFoundException {
 
-        ClientType clientType = clientService.getLocalClientOrThrowNotFound(clientId);
+        ClientEntity clientEntity = clientService.getLocalClientEntityOrThrowNotFound(clientId);
 
-        EndpointType endpointType = endpointService.getBaseEndpointType(clientType, fullServiceCode);
+        EndpointEntity endpointEntity = endpointService.getBaseEndpointEntity(clientEntity, fullServiceCode);
 
-        addAuditData(clientId, subjectIds, endpointType.getServiceCode());
+        addAuditData(clientId, subjectIds, endpointEntity.getServiceCode());
 
         // Combine subject ids and localgroup ids to a single list of XRoadIds
-        return addEndpointAccessRights(clientType, endpointType, subjectIds);
+        return addEndpointAccessRights(clientEntity, endpointEntity, XRoadIdMapper.get().toEntities(subjectIds));
     }
 
     /**
@@ -250,14 +254,13 @@ public class AccessRightService {
      *                                        subjectId did not exist
      * @throws DuplicateAccessRightException  Trying to add duplicate access rights
      */
-    public List<ServiceClientDto> addEndpointAccessRights(Long endpointId, Set<XRoadId.Conf> subjectIds)
-            throws EndpointNotFoundException, ClientNotFoundException,
-                   ServiceClientNotFoundException, DuplicateAccessRightException {
+    public List<ServiceClient> addEndpointAccessRights(Long endpointId, Set<XRoadId.Conf> subjectIds)
+            throws EndpointNotFoundException, ClientNotFoundException, ServiceClientNotFoundException, DuplicateAccessRightException {
 
-        EndpointType endpointType = endpointService.getEndpoint(endpointId);
+        EndpointEntity endpointEntity = endpointService.getEndpointEntity(endpointId);
 
-        ClientType clientType = clientRepository.getClientByEndpointId(endpointId);
-        return addEndpointAccessRights(clientType, endpointType, subjectIds);
+        ClientEntity clientEntity = clientRepository.getClientByEndpointId(endpointId);
+        return addEndpointAccessRights(clientEntity, endpointEntity, XRoadIdMapper.get().toEntities(subjectIds));
 
     }
 
@@ -267,25 +270,25 @@ public class AccessRightService {
      *                                        subjectId did not exist
      * @throws DuplicateAccessRightException
      */
-    private List<ServiceClientDto> addEndpointAccessRights(
-            ClientType clientType,
-            EndpointType endpointType,
-            Set<XRoadId.Conf> subjectIds) throws DuplicateAccessRightException, ServiceClientNotFoundException {
+    private List<ServiceClient> addEndpointAccessRights(
+            ClientEntity clientEntity,
+            EndpointEntity endpointEntity,
+            Set<XRoadIdEntity> subjectIds) throws DuplicateAccessRightException, ServiceClientNotFoundException {
 
         subjectIds.forEach(this::validateServiceClientObjectType);
 
         // verify that all subject ids exist
-        identifierService.verifyServiceClientObjectsExist(clientType, subjectIds);
+        identifierService.verifyServiceClientObjectsExist(clientEntity, subjectIds);
 
         // Get all ids from serverconf db IDENTIFIER table - or add them if they don't exist
-        Set<XRoadId.Conf> managedIds = identifierService.getOrPersistXroadIds(subjectIds);
+        Set<XRoadIdEntity> managedIds = identifierService.getOrPersistXroadIdEntities(subjectIds);
 
         // Add access rights to endpoint
-        addAccessRightsInternal(managedIds, clientType, Collections.singletonList(endpointType));
+        addAccessRightsInternal(managedIds, clientEntity, Collections.singletonList(endpointEntity));
 
         // Create DTOs for returning data
-        List<AccessRightType> accessRightsByEndpoint = getAccessRightsByEndpoint(clientType, endpointType);
-        return mapAccessRightsToServiceClients(clientType, accessRightsByEndpoint);
+        List<AccessRightEntity> accessRightsByEndpoint = getAccessRightsByEndpoint(clientEntity, endpointEntity);
+        return mapAccessRightsToServiceClients(clientEntity, accessRightsByEndpoint);
     }
 
     /**
@@ -313,25 +316,27 @@ public class AccessRightService {
 
         addAuditData(clientId, subjectId, serviceCodes);
 
-        ClientType clientType = clientService.getLocalClientOrThrowNotFound(clientId);
+        ClientEntity clientEntity = clientService.getLocalClientEntityOrThrowNotFound(clientId);
 
         validateServiceClientObjectType(subjectId);
 
+        XRoadIdEntity subjectIdEntity = XRoadIdMapper.get().toEntity(subjectId);
+
         // verify that given service client objects exist, otherwise access cannot be added
-        identifierService.verifyServiceClientObjectsExist(clientType, new HashSet<>(Arrays.asList(subjectId)));
+        identifierService.verifyServiceClientObjectsExist(clientEntity, Set.of(subjectIdEntity));
 
         // prepare params for addAccessRightsInternal
-        List<EndpointType> baseEndpoints = null;
+        List<EndpointEntity> baseEndpoints = null;
         try {
-            baseEndpoints = endpointService.getServiceBaseEndpoints(clientType, serviceCodes);
+            baseEndpoints = endpointService.getServiceBaseEndpointEntities(clientEntity, serviceCodes);
         } catch (EndpointNotFoundException e) {
             throw new ServiceNotFoundException(e);
         }
 
         // make sure subject id exists in serverconf db IDENTIFIER table, and use a managed entity
-        XRoadId.Conf managedSubjectId = identifierService.getOrPersistXroadId(subjectId);
+        XRoadIdEntity managedSubjectId = identifierService.getOrPersistXroadIdEntity(subjectIdEntity);
 
-        return addAccessRightsInternal(new HashSet<>(Arrays.asList(managedSubjectId)), clientType, baseEndpoints)
+        return addAccessRightsInternal(new HashSet<>(Arrays.asList(managedSubjectId)), clientEntity, baseEndpoints)
                 .get(managedSubjectId);
     }
 
@@ -355,39 +360,39 @@ public class AccessRightService {
 
         addAuditData(clientId, subjectId, serviceCodes);
 
-        ClientType clientType = clientService.getLocalClientOrThrowNotFound(clientId);
+        ClientEntity clientEntity = clientService.getLocalClientEntityOrThrowNotFound(clientId);
 
         validateServiceClientObjectType(subjectId);
 
         // first delete base endpoint access rights. These all need to exist, otherwise AccessRightNotFoundException
-        List<EndpointType> baseEndpoints = null;
+        List<EndpointEntity> baseEndpoints = null;
         try {
-            baseEndpoints = endpointService.getServiceBaseEndpoints(clientType, serviceCodes);
+            baseEndpoints = endpointService.getServiceBaseEndpointEntities(clientEntity, serviceCodes);
         } catch (EndpointNotFoundException e) {
             throw new ServiceNotFoundException(e);
         }
-        Set<XRoadId> subjectIds = new HashSet<>(Arrays.asList((subjectId)));
-        deleteEndpointAccessRights(clientType, baseEndpoints, subjectIds);
+        Set<XRoadIdEntity> subjectIds = new HashSet<>(Collections.singletonList(XRoadIdMapper.get().toEntity(subjectId)));
+        deleteEndpointAccessRights(clientEntity, baseEndpoints, subjectIds);
 
         // then delete all non-base endpoint access rights, for this subject. If there's none, that's fine
-        List<EndpointType> allEndpoints = endpointService.getServiceEndpoints(clientType, serviceCodes);
-        List<AccessRightType> remainingAccessRights = getEndpointAccessRights(clientType, allEndpoints, subjectIds);
+        List<EndpointEntity> allEndpoints = endpointService.getServiceEndpointEntities(clientEntity, serviceCodes);
+        List<AccessRightEntity> remainingAccessRights = getEndpointAccessRights(clientEntity, allEndpoints, subjectIds);
         if (!remainingAccessRights.isEmpty()) {
-            Set<EndpointType> endpointsWithAccessRights = remainingAccessRights.stream()
-                    .map(a -> a.getEndpoint())
+            Set<EndpointEntity> endpointsWithAccessRights = remainingAccessRights.stream()
+                    .map(AccessRightEntity::getEndpoint)
                     .collect(Collectors.toSet());
-            deleteEndpointAccessRights(clientType, new ArrayList<>(endpointsWithAccessRights), subjectIds);
+            deleteEndpointAccessRights(clientEntity, new ArrayList<>(endpointsWithAccessRights), subjectIds);
         }
     }
 
     /**
-     * Get client's acl entries that match endpointTypes and subjects
+     * Get client's acl entries that match endpoints and subjects
      */
-    private List<AccessRightType> getEndpointAccessRights(ClientType clientType, List<EndpointType> endpointTypes,
-                                                          Set<XRoadId> subjectIds) {
+    private List<AccessRightEntity> getEndpointAccessRights(ClientEntity clientEntity, List<EndpointEntity> endpointEntities,
+                                                            Set<XRoadIdEntity> subjectIds) {
 
-        List<Long> endpointIds = endpointTypes.stream().map(EndpointType::getId).toList();
-        return clientType.getAcl().stream()
+        List<Long> endpointIds = endpointEntities.stream().map(EndpointEntity::getId).toList();
+        return clientEntity.getAccessRights().stream()
                 .filter(acl -> endpointIds.contains(acl.getEndpoint().getId())
                         && subjectIds.contains(acl.getSubjectId()))
                 .collect(Collectors.toList());
@@ -416,64 +421,62 @@ public class AccessRightService {
 
     /**
      * Get access right holders (serviceClients) for endpoint
-     * @param clientType
-     * @param accessRightTypes
-     * @return
+     * @param clientEntity clientEntity
+     * @param accessRightEntities accessRightEntities
+     * @return List<ServiceClient>
      */
-    public List<ServiceClientDto> mapAccessRightsToServiceClients(ClientType clientType,
-                                                                  List<AccessRightType> accessRightTypes) {
-        Map<String, LocalGroupType> localGroupMap = new HashMap<>();
-        clientType.getLocalGroup().forEach(localGroupType -> localGroupMap.put(localGroupType.getGroupCode(),
-                localGroupType));
+    public List<ServiceClient> mapAccessRightsToServiceClients(ClientEntity clientEntity, List<AccessRightEntity> accessRightEntities) {
+        Map<String, LocalGroupEntity> localGroupMap = new HashMap<>();
+        clientEntity.getLocalGroups().forEach(localGroupEntity -> localGroupMap.put(localGroupEntity.getGroupCode(), localGroupEntity));
 
-        return accessRightTypes.stream()
-                .map((accessRightType -> accessRightTypeToServiceClientDto(accessRightType, localGroupMap)))
+        return accessRightEntities.stream()
+                .map((accessRightEntity -> accessRightEntityToServiceClientDto(accessRightEntity, localGroupMap)))
                 .collect(Collectors.toList());
     }
 
     /**
-     * Makes an {@link ServiceClientDto} out of {@link AccessRightType}
-     * @param accessRightType The AccessRightType to convert from
-     * @param localGroupMap   A Map containing {@link LocalGroupType LocalGroupTypes} mapped by
-     *                        their corresponding {@link LocalGroupType#getGroupCode()}
-     * @return
+     * Makes an {@link ServiceClient} out of {@link AccessRight}
+     * @param accessRightEntity The accessRightEntity to convert from
+     * @param localGroupMap A Map containing {@link LocalGroup LocalGroup} mapped by
+     * their corresponding {@link LocalGroup#getGroupCode()}
+     * @return ServiceClient
      */
-    ServiceClientDto accessRightTypeToServiceClientDto(AccessRightType accessRightType,
-                                                       Map<String, LocalGroupType> localGroupMap) {
-        ServiceClientDto serviceClientDto = new ServiceClientDto();
-        XRoadId subjectId = accessRightType.getSubjectId();
-        serviceClientDto.setRightsGiven(
-                FormatUtils.fromDateToOffsetDateTime(accessRightType.getRightsGiven()));
-        serviceClientDto.setSubjectId(subjectId);
+    ServiceClient accessRightEntityToServiceClientDto(AccessRightEntity accessRightEntity,
+                                                       Map<String, LocalGroupEntity> localGroupMap) {
+        ServiceClient serviceClient = new ServiceClient();
+        XRoadId subjectId = accessRightEntity.getSubjectId();
+        serviceClient.setRightsGiven(
+                FormatUtils.fromDateToOffsetDateTime(accessRightEntity.getRightsGiven()));
+        serviceClient.setSubjectId(subjectId);
         switch (subjectId.getObjectType()) {
             case XRoadObjectType.LOCALGROUP -> {
                 LocalGroupId localGroupId = (LocalGroupId) subjectId;
-                LocalGroupType localGroupType = localGroupMap.get(localGroupId.getGroupCode());
-                serviceClientDto.setLocalGroupId(localGroupType.getId().toString());
-                serviceClientDto.setLocalGroupCode(localGroupType.getGroupCode());
-                serviceClientDto.setLocalGroupDescription(localGroupType.getDescription());
+                LocalGroupEntity localGroupEntity = localGroupMap.get(localGroupId.getGroupCode());
+                serviceClient.setLocalGroupId(localGroupEntity.getId().toString());
+                serviceClient.setLocalGroupCode(localGroupEntity.getGroupCode());
+                serviceClient.setLocalGroupDescription(localGroupEntity.getDescription());
             }
             case XRoadObjectType.GLOBALGROUP -> {
                 GlobalGroupId globalGroupId = (GlobalGroupId) subjectId;
-                serviceClientDto.setGlobalGroupDescription(globalConfProvider.getGlobalGroupDescription(globalGroupId));
+                serviceClient.setGlobalGroupDescription(globalConfProvider.getGlobalGroupDescription(globalGroupId));
             }
-            case XRoadObjectType.SUBSYSTEM -> serviceClientDto.setSubsystemName(globalConfProvider.getSubsystemName((ClientId) subjectId));
-            case XRoadObjectType.MEMBER -> serviceClientDto.setMemberName(globalConfProvider.getMemberName((ClientId) subjectId));
+            case XRoadObjectType.SUBSYSTEM -> serviceClient.setSubsystemName(globalConfProvider.getSubsystemName((ClientId) subjectId));
+            case XRoadObjectType.MEMBER -> serviceClient.setMemberName(globalConfProvider.getMemberName((ClientId) subjectId));
             case null, default -> {
             }
         }
-        return serviceClientDto;
+        return serviceClient;
     }
 
     /**
      * Get access rights of an endpoint
-     * @param clientType
-     * @param endpointType
-     * @return
+     * @param clientEntity clientEntity
+     * @param endpointEntity endpointEntity
+     * @return List<AccessRightEntity>
      */
-    public List<AccessRightType> getAccessRightsByEndpoint(ClientType clientType, EndpointType endpointType) {
-        return clientType.getAcl().stream()
-                .filter(accessRightType -> accessRightType.getEndpoint().getId().equals(endpointType.getId()))
+    List<AccessRightEntity> getAccessRightsByEndpoint(ClientEntity clientEntity, EndpointEntity endpointEntity) {
+        return clientEntity.getAccessRights().stream()
+                .filter(accessRightEntity -> accessRightEntity.getEndpoint().getId().equals(endpointEntity.getId()))
                 .collect(Collectors.toList());
     }
 
@@ -484,13 +487,14 @@ public class AccessRightService {
      * <p>
      * Note that subjectIds need to be managed entities.
      * @param subjectIds *managed* access rights subjects to grant access for, "service clients"
-     * @param clientType endpoint owner
-     * @param endpoints  endpoints to add access rights to
+     * @param clientEntity endpoint owner
+     * @param endpoints endpoints to add access rights to
      * @return map, key = subjectId (service client), value = list of access rights added for the subject
      * @throws DuplicateAccessRightException if trying to add existing access right
      */
-    Map<XRoadId.Conf, List<ServiceClientAccessRightDto>> addAccessRightsInternal(Set<XRoadId.Conf> subjectIds,
-                                                                                 ClientType clientType, List<EndpointType> endpoints)
+    Map<XRoadIdEntity, List<ServiceClientAccessRightDto>> addAccessRightsInternal(Set<XRoadIdEntity> subjectIds,
+                                                                                  ClientEntity clientEntity,
+                                                                                  List<EndpointEntity> endpoints)
             throws DuplicateAccessRightException {
         Date now = new Date();
 
@@ -501,32 +505,32 @@ public class AccessRightService {
             throw new IllegalArgumentException("missing endpoints");
         }
 
-        Map<XRoadId.Conf, List<ServiceClientAccessRightDto>> addedAccessRights = new HashMap<>();
+        Map<XRoadIdEntity, List<ServiceClientAccessRightDto>> addedAccessRights = new HashMap<>();
 
-        for (EndpointType endpoint : endpoints) {
-            for (XRoadId.Conf subjectId : subjectIds) {
-                ServiceClientAccessRightDto dto = addAccessRightInternal(clientType, now, endpoint, subjectId);
+        for (EndpointEntity endpoint : endpoints) {
+            for (XRoadIdEntity subjectId : subjectIds) {
+                ServiceClientAccessRightDto dto = addAccessRightInternal(clientEntity, now, endpoint, subjectId);
                 addedAccessRights.computeIfAbsent(subjectId, k -> new ArrayList<>()).add(dto);
             }
         }
-        clientRepository.merge(clientType);
+        clientRepository.merge(clientEntity);
 
         return addedAccessRights;
     }
 
     /**
      * Add access right for a single subject (subjectId), to a single endpoint (endpoint)
-     * that belongs to clientType. Assumes parameters are already validated, service client objects
+     * that belongs to client. Assumes parameters are already validated, service client objects
      * for subjectId exist
-     * @param clientType
-     * @param rightsGiven
-     * @param endpoint
-     * @param subjectId
-     * @return
+     * @param clientEntity clientEntity
+     * @param rightsGiven rightsGiven
+     * @param endpointEntity endpointEntity
+     * @param subjectId subjectId
+     * @return ServiceClientAccessRightDto
      * @throws DuplicateAccessRightException if access right already exists
      */
-    private ServiceClientAccessRightDto addAccessRightInternal(ClientType clientType, Date rightsGiven,
-                                                               EndpointType endpoint, XRoadId subjectId)
+    private ServiceClientAccessRightDto addAccessRightInternal(ClientEntity clientEntity, Date rightsGiven,
+                                                               EndpointEntity endpointEntity, XRoadIdEntity subjectId)
             throws DuplicateAccessRightException {
 
         // some sanity checks for the parameters. These should be covered already in earlier methods,
@@ -534,42 +538,42 @@ public class AccessRightService {
         // Throw runtime exceptions if these checks fail
         validateServiceClientObjectType(subjectId);
 
-        List<LocalGroupType> clientLocalGroups = clientType.getLocalGroup();
+        List<LocalGroupEntity> clientLocalGroups = clientEntity.getLocalGroups();
 
         if (subjectId.getObjectType() == XRoadObjectType.LOCALGROUP) {
             LocalGroupId localGroupId = (LocalGroupId) subjectId;
             boolean localGroupNotFound = clientLocalGroups.stream()
-                    .noneMatch(localGroupType -> localGroupType.getGroupCode()
+                    .noneMatch(localGroupEntity -> localGroupEntity.getGroupCode()
                             .equals(localGroupId.getGroupCode()));
             if (localGroupNotFound) {
                 String errorMsg = String.format("LocalGroup with the groupCode %s does not belong to client %s",
-                        subjectId.toShortString(), clientType.getIdentifier().toShortString());
+                        subjectId.toShortString(), clientEntity.getIdentifier().toShortString());
                 throw new IllegalStateException(errorMsg);
             }
         }
 
         // list endpoints, which this subject / service client has already been granted access to
-        Set<EndpointType> existingAccessibleEndpoints = clientType.getAcl().stream()
-                .filter(accessRightType -> accessRightType.getSubjectId().equals(subjectId))
-                .map(AccessRightType::getEndpoint)
+        Set<EndpointEntity> existingAccessibleEndpoints = clientEntity.getAccessRights().stream()
+                .filter(accessRightEntity -> accessRightEntity.getSubjectId().equals(subjectId))
+                .map(AccessRightEntity::getEndpoint)
                 .collect(Collectors.toSet());
 
-        if (existingAccessibleEndpoints.contains(endpoint)) {
+        if (existingAccessibleEndpoints.contains(endpointEntity)) {
             throw new DuplicateAccessRightException("Subject " + subjectId.toShortString()
-                    + " already has an access right for endpoint " + endpoint.getId());
+                    + " already has an access right for endpoint " + endpointEntity.getId());
         }
 
-        AccessRightType newAccessRight = new AccessRightType();
-        newAccessRight.setEndpoint(endpoint);
+        AccessRightEntity newAccessRight = new AccessRightEntity();
+        newAccessRight.setEndpoint(endpointEntity);
         newAccessRight.setSubjectId(subjectId);
         newAccessRight.setRightsGiven(rightsGiven);
-        clientType.getAcl().add(newAccessRight);
+        clientEntity.getAccessRights().add(newAccessRight);
 
         // return a dto
         return ServiceClientAccessRightDto.builder()
-                .serviceCode(endpoint.getServiceCode())
+                .serviceCode(endpointEntity.getServiceCode())
                 .rightsGiven(FormatUtils.fromDateToOffsetDateTime(rightsGiven))
-                .title(serviceDescriptionService.getServiceTitle(clientType, endpoint.getServiceCode()))
+                .title(serviceDescriptionService.getServiceTitle(clientEntity, endpointEntity.getServiceCode()))
                 .build();
     }
 
@@ -580,11 +584,6 @@ public class AccessRightService {
         public AccessRightNotFoundException(String s) {
             super(s, new ErrorDeviation(ERROR_ACCESSRIGHT_NOT_FOUND));
         }
-
-        public AccessRightNotFoundException(Throwable t) {
-            super(t, new ErrorDeviation(ERROR_ACCESSRIGHT_NOT_FOUND));
-        }
-
     }
 
     /**
@@ -608,40 +607,40 @@ public class AccessRightService {
      * @param memberGroupCode              search term for memberCode or groupCode (depending on subject's type).
      *                                     Null or empty value is considered a match
      * @param subsystemCode                search term for subsystemCode. Null or empty value is considered a match
-     * @return A List of {@link ServiceClientDto serviceClientDtos} or an empty List if nothing is found
+     * @return A List of {@link ServiceClient serviceClients} or an empty List if nothing is found
      * @throws ClientNotFoundException if client with given id was not found
      */
-    public List<ServiceClientDto> findAccessRightHolderCandidates(ClientId clientId,
-                                                                  String memberNameOrGroupDescription,
-                                                                  XRoadObjectType subjectType,
-                                                                  String instance,
-                                                                  String memberClass,
-                                                                  String memberGroupCode,
-                                                                  String subsystemCode) throws ClientNotFoundException {
-        List<ServiceClientDto> dtos = new ArrayList<>();
+    public List<ServiceClient> findAccessRightHolderCandidates(ClientId clientId,
+                                                               String memberNameOrGroupDescription,
+                                                               XRoadObjectType subjectType,
+                                                               String instance,
+                                                               String memberClass,
+                                                               String memberGroupCode,
+                                                               String subsystemCode) throws ClientNotFoundException {
+        List<ServiceClient> dtos = new ArrayList<>();
 
         // get client
-        ClientType client = clientService.getLocalClientOrThrowNotFound(clientId);
+        ClientEntity client = clientService.getLocalClientEntityOrThrowNotFound(clientId);
 
         // get global members
-        List<ServiceClientDto> globalMembers = getGlobalMembersAsDtos();
+        List<ServiceClient> globalMembers = getGlobalMembersAsDtos();
         if (!globalMembers.isEmpty()) {
             dtos.addAll(globalMembers);
         }
 
         // get global groups
-        List<ServiceClientDto> globalGroups = getGlobalGroupsAsDtos(instance);
+        List<ServiceClient> globalGroups = getGlobalGroupsAsDtos(instance);
         if (!globalMembers.isEmpty()) {
             dtos.addAll(globalGroups);
         }
 
         // get local groups
-        List<ServiceClientDto> localGroups = getLocalGroupsAsDtos(client.getLocalGroup());
+        List<ServiceClient> localGroups = getLocalGroupsAsDtos(client.getLocalGroups());
         if (!localGroups.isEmpty()) {
             dtos.addAll(localGroups);
         }
 
-        Predicate<ServiceClientDto> matchingSearchTerms = buildSubjectSearchPredicate(subjectType,
+        Predicate<ServiceClient> matchingSearchTerms = buildSubjectSearchPredicate(subjectType,
                 memberNameOrGroupDescription, instance, memberClass, memberGroupCode, subsystemCode);
 
         return dtos.stream()
@@ -649,32 +648,32 @@ public class AccessRightService {
                 .collect(Collectors.toList());
     }
 
-    private List<ServiceClientDto> getLocalGroupsAsDtos(List<LocalGroupType> localGroupTypes) {
-        return localGroupTypes.stream()
+    private List<ServiceClient> getLocalGroupsAsDtos(List<LocalGroupEntity> localGroupEntities) {
+        return localGroupEntities.stream()
                 .map(localGroup -> {
-                    ServiceClientDto serviceClientDto = new ServiceClientDto();
-                    serviceClientDto.setLocalGroupId(localGroup.getId().toString());
-                    serviceClientDto.setLocalGroupCode(localGroup.getGroupCode());
-                    serviceClientDto.setSubjectId(LocalGroupId.Conf.create(localGroup.getGroupCode()));
-                    serviceClientDto.setLocalGroupDescription(localGroup.getDescription());
-                    return serviceClientDto;
+                    ServiceClient serviceClient = new ServiceClient();
+                    serviceClient.setLocalGroupId(localGroup.getId().toString());
+                    serviceClient.setLocalGroupCode(localGroup.getGroupCode());
+                    serviceClient.setSubjectId(LocalGroupId.Conf.create(localGroup.getGroupCode()));
+                    serviceClient.setLocalGroupDescription(localGroup.getDescription());
+                    return serviceClient;
                 }).collect(Collectors.toList());
     }
 
-    private List<ServiceClientDto> getGlobalMembersAsDtos() {
+    private List<ServiceClient> getGlobalMembersAsDtos() {
         return globalConfProvider.getMembers().stream()
                 .map(memberInfo -> {
-                    ServiceClientDto serviceClientDto = new ServiceClientDto();
-                    serviceClientDto.setSubjectId(memberInfo.id());
-                    serviceClientDto.setMemberName(memberInfo.name());
-                    serviceClientDto.setSubsystemName(memberInfo.subsystemName());
-                    return serviceClientDto;
+                    ServiceClient serviceClient = new ServiceClient();
+                    serviceClient.setSubjectId(memberInfo.id());
+                    serviceClient.setMemberName(memberInfo.name());
+                    serviceClient.setSubsystemName(memberInfo.subsystemName());
+                    return serviceClient;
                 })
                 .collect(Collectors.toList());
     }
 
-    private List<ServiceClientDto> getGlobalGroupsAsDtos(String instance) {
-        List<ServiceClientDto> globalGroups = new ArrayList<>();
+    private List<ServiceClient> getGlobalGroupsAsDtos(String instance) {
+        List<ServiceClient> globalGroups = new ArrayList<>();
         Set<String> globalGroupInstances = globalConfProvider.getInstanceIdentifiers();
         List<GlobalGroupInfo> globalGroupInfos = null;
         // core throws CodedException if nothing is found for the provided instance/instances
@@ -695,18 +694,18 @@ public class AccessRightService {
         }
         if (globalGroupInfos != null && !globalGroupInfos.isEmpty()) {
             globalGroupInfos.forEach(globalGroupInfo -> {
-                ServiceClientDto serviceClientDto = new ServiceClientDto();
-                serviceClientDto.setSubjectId(globalGroupInfo.id());
-                serviceClientDto.setGlobalGroupDescription(globalGroupInfo.description());
-                globalGroups.add(serviceClientDto);
+                ServiceClient serviceClient = new ServiceClient();
+                serviceClient.setSubjectId(globalGroupInfo.id());
+                serviceClient.setGlobalGroupDescription(globalGroupInfo.description());
+                globalGroups.add(serviceClient);
             });
         }
         return globalGroups;
     }
 
     /**
-     * Composes a {@link Predicate} that will be used to filter {@link ServiceClientDto ServiceClientDtos}
-     * against the given search terms. The given ServiceClientDto has a {@link ServiceClientDto#getSubjectId()}
+     * Composes a {@link Predicate} that will be used to filter {@link ServiceClient ServiceClients}
+     * against the given search terms. The given ServiceClientDto has a {@link ServiceClient#getSubjectId()}
      * which can be of type {@link GlobalGroupId}, {@link LocalGroupId} or {@link ClientId}. When evaluating the
      * Predicate the type of the Subject will be taken in account for example when testing if the search term
      * {@code memberGroupCode} matches
@@ -720,14 +719,14 @@ public class AccessRightService {
      * @param subsystemCode                search term for subsystemCode. Null or empty value is considered a match
      * @return Predicate
      */
-    private Predicate<ServiceClientDto> buildSubjectSearchPredicate(XRoadObjectType subjectType,
-                                                                    String memberNameOrGroupDescription,
-                                                                    String instance,
-                                                                    String memberClass,
-                                                                    String memberGroupCode,
-                                                                    String subsystemCode) {
+    private Predicate<ServiceClient> buildSubjectSearchPredicate(XRoadObjectType subjectType,
+                                                                 String memberNameOrGroupDescription,
+                                                                 String instance,
+                                                                 String memberClass,
+                                                                 String memberGroupCode,
+                                                                 String subsystemCode) {
         // Start by assuming the search is a match. If there are no search terms --> return all
-        Predicate<ServiceClientDto> searchPredicate = accessRightHolderDto -> true;
+        Predicate<ServiceClient> searchPredicate = accessRightHolderDto -> true;
 
         // Ultimately members cannot have access rights to Services -> no members in the Subject search results.
         searchPredicate = searchPredicate.and(dto -> dto.getSubjectId().getObjectType() != XRoadObjectType.MEMBER);
@@ -760,7 +759,7 @@ public class AccessRightService {
         return searchPredicate;
     }
 
-    private Predicate<ServiceClientDto> getSubjectMemberOrGroupCodePredicate(String memberGroupCode) {
+    private Predicate<ServiceClient> getSubjectMemberOrGroupCodePredicate(String memberGroupCode) {
         return dto -> {
             XRoadId xRoadId = dto.getSubjectId();
             if (xRoadId instanceof ClientId) {
@@ -778,7 +777,7 @@ public class AccessRightService {
         };
     }
 
-    private Predicate<ServiceClientDto> getSubjectSubsystemCodePredicate(String subsystemCode) {
+    private Predicate<ServiceClient> getSubjectSubsystemCodePredicate(String subsystemCode) {
         return dto -> {
             XRoadId xRoadId = dto.getSubjectId();
             if (xRoadId instanceof ClientId) {
@@ -790,7 +789,7 @@ public class AccessRightService {
         };
     }
 
-    private Predicate<ServiceClientDto> getSubjectMemberClassPredicate(String memberClass) {
+    private Predicate<ServiceClient> getSubjectMemberClassPredicate(String memberClass) {
         return dto -> {
             XRoadId xRoadId = dto.getSubjectId();
             if (xRoadId instanceof ClientId) {
@@ -802,7 +801,7 @@ public class AccessRightService {
         };
     }
 
-    private Predicate<ServiceClientDto> getSubjectInstancePredicate(String instance) {
+    private Predicate<ServiceClient> getSubjectInstancePredicate(String instance) {
         return dto -> {
             XRoadId xRoadId = dto.getSubjectId();
             // In case the Subject is a LocalGroup: LocalGroups do not have explicit X-Road instances
@@ -815,7 +814,7 @@ public class AccessRightService {
         };
     }
 
-    private Predicate<ServiceClientDto> getMemberNameOrGroupDescriptionPredicate(String memberNameOrGroupDescription) {
+    private Predicate<ServiceClient> getMemberNameOrGroupDescriptionPredicate(String memberNameOrGroupDescription) {
         return dto -> {
             String memberName = dto.getMemberName();
             String subsystemName = dto.getSubsystemName();
