@@ -1,5 +1,6 @@
 /*
  * The MIT License
+ *
  * Copyright (c) 2019- Nordic Institute for Interoperability Solutions (NIIS)
  * Copyright (c) 2018 Estonian Information System Authority (RIA),
  * Nordic Institute for Interoperability Solutions (NIIS), Population Register Centre (VRK)
@@ -50,11 +51,21 @@ import org.niis.xroad.securityserver.restapi.repository.IdentifierRepository;
 import org.niis.xroad.securityserver.restapi.repository.LocalGroupRepository;
 import org.niis.xroad.securityserver.restapi.util.ClientUtils;
 import org.niis.xroad.serverconf.IsAuthentication;
-import org.niis.xroad.serverconf.model.CertificateType;
-import org.niis.xroad.serverconf.model.ClientType;
-import org.niis.xroad.serverconf.model.LocalGroupType;
-import org.niis.xroad.serverconf.model.ServerConfType;
-import org.niis.xroad.serverconf.model.ServiceDescriptionType;
+import org.niis.xroad.serverconf.impl.entity.CertificateEntity;
+import org.niis.xroad.serverconf.impl.entity.ClientEntity;
+import org.niis.xroad.serverconf.impl.entity.ClientIdEntity;
+import org.niis.xroad.serverconf.impl.entity.LocalGroupEntity;
+import org.niis.xroad.serverconf.impl.entity.ServerConfEntity;
+import org.niis.xroad.serverconf.impl.entity.ServiceDescriptionEntity;
+import org.niis.xroad.serverconf.impl.mapper.CertificateMapper;
+import org.niis.xroad.serverconf.impl.mapper.ClientMapper;
+import org.niis.xroad.serverconf.impl.mapper.LocalGroupMapper;
+import org.niis.xroad.serverconf.impl.mapper.ServiceDescriptionMapper;
+import org.niis.xroad.serverconf.impl.mapper.XRoadIdMapper;
+import org.niis.xroad.serverconf.model.Certificate;
+import org.niis.xroad.serverconf.model.Client;
+import org.niis.xroad.serverconf.model.LocalGroup;
+import org.niis.xroad.serverconf.model.ServiceDescription;
 import org.niis.xroad.signer.api.dto.CertificateInfo;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
@@ -86,14 +97,14 @@ import static org.niis.xroad.restapi.exceptions.DeviationCodes.ERROR_INVALID_INS
 import static org.niis.xroad.restapi.exceptions.DeviationCodes.ERROR_INVALID_MEMBER_CLASS;
 import static org.niis.xroad.restapi.exceptions.DeviationCodes.WARNING_UNREGISTERED_MEMBER;
 import static org.niis.xroad.securityserver.restapi.util.ClientUtils.doesSupportSubsystemNames;
-import static org.niis.xroad.serverconf.model.ClientType.STATUS_DELINPROG;
-import static org.niis.xroad.serverconf.model.ClientType.STATUS_DISABLED;
-import static org.niis.xroad.serverconf.model.ClientType.STATUS_DISABLING_INPROG;
-import static org.niis.xroad.serverconf.model.ClientType.STATUS_ENABLING_INPROG;
-import static org.niis.xroad.serverconf.model.ClientType.STATUS_GLOBALERR;
-import static org.niis.xroad.serverconf.model.ClientType.STATUS_REGINPROG;
-import static org.niis.xroad.serverconf.model.ClientType.STATUS_REGISTERED;
-import static org.niis.xroad.serverconf.model.ClientType.STATUS_SAVED;
+import static org.niis.xroad.serverconf.model.Client.STATUS_DELINPROG;
+import static org.niis.xroad.serverconf.model.Client.STATUS_DISABLED;
+import static org.niis.xroad.serverconf.model.Client.STATUS_DISABLING_INPROG;
+import static org.niis.xroad.serverconf.model.Client.STATUS_ENABLING_INPROG;
+import static org.niis.xroad.serverconf.model.Client.STATUS_GLOBALERR;
+import static org.niis.xroad.serverconf.model.Client.STATUS_REGINPROG;
+import static org.niis.xroad.serverconf.model.Client.STATUS_REGISTERED;
+import static org.niis.xroad.serverconf.model.Client.STATUS_SAVED;
 
 /**
  * client service
@@ -126,7 +137,11 @@ public class ClientService {
      * return all clients that exist on this security server
      * @return
      */
-    public List<ClientType> getAllLocalClients() {
+    public List<Client> getAllLocalClients() {
+        return ClientMapper.get().toTargets(clientRepository.getAllLocalClients());
+    }
+
+    List<ClientEntity> getAllLocalClientEntities() {
         return clientRepository.getAllLocalClients();
     }
 
@@ -135,8 +150,8 @@ public class ClientService {
      * There can only be 0, 1 or 2 members
      * @return
      */
-    public List<ClientType> getAllLocalMembers() {
-        return getAllLocalClients().stream()
+    List<ClientEntity> getAllLocalMemberEntities() {
+        return getAllLocalClientEntities().stream()
                 .filter(ct -> ct.getIdentifier().getSubsystemCode() == null)
                 .collect(Collectors.toList());
     }
@@ -153,9 +168,9 @@ public class ClientService {
      * @return
      */
     public Set<ClientId> getLocalClientMemberIds() {
-        List<ClientType> allClients = getAllLocalClients();
+        List<ClientEntity> allClients = getAllLocalClientEntities();
         Set<ClientId> members = new HashSet<>();
-        for (ClientType client : allClients) {
+        for (ClientEntity client : allClients) {
             ClientId id = client.getIdentifier();
             members.add(ClientId.Conf.create(id.getXRoadInstance(), id.getMemberClass(), id.getMemberCode()));
         }
@@ -166,13 +181,13 @@ public class ClientService {
      * return all global clients as ClientTypes
      * @return
      */
-    public List<ClientType> getAllGlobalClients() {
+    private List<ClientEntity> getAllGlobalClientEntities() {
         return globalConfProvider.getMembers()
                 .stream()
                 .map(memberInfo -> {
-                    ClientType clientType = new ClientType();
-                    clientType.setIdentifier(memberInfo.id());
-                    return clientType;
+                    ClientEntity clientEntity = new ClientEntity();
+                    clientEntity.setIdentifier(XRoadIdMapper.get().toEntity(memberInfo.id()));
+                    return clientEntity;
                 })
                 .collect(Collectors.toList());
     }
@@ -185,55 +200,59 @@ public class ClientService {
      * @param id
      * @return the client, or null if matching client was not found
      */
-    public ClientType getLocalClient(ClientId id) {
+    public Client getLocalClient(ClientId id) {
+        return ClientMapper.get().toTarget(getLocalClientEntity(id));
+    }
+
+    public ClientEntity getLocalClientEntity(ClientId id) {
         return clientRepository.getClient(id);
     }
 
     /**
-     * Returns clientType.getIsCert() that has been fetched with Hibernate.init.
-     * @param id
-     * @return list of CertificateTypes, or null if client does not exist
+     * Returns clientEntity.getCertificates() that has been fetched with Hibernate.init.
+     * @param id client id
+     * @return list of Certificate, or null if client does not exist
      */
-    public List<CertificateType> getLocalClientIsCerts(ClientId id) {
-        ClientType clientType = getLocalClient(id);
-        if (clientType != null) {
-            Hibernate.initialize(clientType.getIsCert());
-            return clientType.getIsCert();
+    public List<Certificate> getLocalClientIsCerts(ClientId id) {
+        ClientEntity clientEntity = getLocalClientEntity(id);
+        if (clientEntity != null) {
+            Hibernate.initialize(clientEntity.getCertificates());
+            return CertificateMapper.get().toTargets(clientEntity.getCertificates());
         }
         return null;
     }
 
     /**
-     * Returns clientType.getServiceDescription() that has been fetched with Hibernate.init.
+     * Returns client.getServiceDescription() that has been fetched with Hibernate.init.
      * Also serviceDescription.services and serviceDescription.client.endpoints have been fetched.
      * @param id
-     * @return list of ServiceDescriptionTypes, or null if client does not exist
+     * @return list of ServiceDescription, or null if client does not exist
      */
-    public List<ServiceDescriptionType> getLocalClientServiceDescriptions(ClientId id) {
-        ClientType clientType = getLocalClient(id);
-        if (clientType != null) {
-            for (ServiceDescriptionType serviceDescriptionType : clientType.getServiceDescription()) {
-                Hibernate.initialize(serviceDescriptionType.getService());
+    public List<ServiceDescription> getLocalClientServiceDescriptions(ClientId id) {
+        ClientEntity clientEntity = getLocalClientEntity(id);
+        if (clientEntity != null) {
+            for (ServiceDescriptionEntity serviceDescriptionEntity : clientEntity.getServiceDescriptions()) {
+                Hibernate.initialize(serviceDescriptionEntity.getServices());
             }
-            Hibernate.initialize(clientType.getEndpoint());
-            return clientType.getServiceDescription();
+            Hibernate.initialize(clientEntity.getEndpoints());
+            return ServiceDescriptionMapper.get().toTargets(clientEntity.getServiceDescriptions());
         }
         return null;
     }
 
     /**
-     * Returns clientType.getLocalGroup() that has been fetched with Hibernate.init.
+     * Returns client.getLocalGroup() that has been fetched with Hibernate.init.
      * Also localGroup.groupMembers have been fetched.
-     * @param id
-     * @return list of LocalGroupTypes, or null if client does not exist
+     * @param id id
+     * @return list of LocalGroup, or null if client does not exist
      */
-    public List<LocalGroupType> getLocalClientLocalGroups(ClientId id) {
-        ClientType clientType = getLocalClient(id);
-        if (clientType != null) {
-            for (LocalGroupType localGroupType : clientType.getLocalGroup()) {
-                Hibernate.initialize(localGroupType.getGroupMember());
+    public List<LocalGroup> getLocalClientLocalGroups(ClientId id) {
+        ClientEntity clientEntity = getLocalClientEntity(id);
+        if (clientEntity != null) {
+            for (LocalGroupEntity localGroupEntity : clientEntity.getLocalGroups()) {
+                Hibernate.initialize(localGroupEntity.getGroupMembers());
             }
-            return clientType.getLocalGroup();
+            return LocalGroupMapper.get().toTargets(clientEntity.getLocalGroups());
         }
         return null;
     }
@@ -246,37 +265,37 @@ public class ClientService {
      * @throws IllegalArgumentException if connectionType was not supported value
      * @throws ClientNotFoundException  if client was not found
      */
-    public ClientType updateConnectionType(ClientId id, String connectionType) throws ClientNotFoundException {
+    public Client updateConnectionType(ClientId id, String connectionType) throws ClientNotFoundException {
         auditDataHelper.put(id);
-        ClientType clientType = getLocalClientOrThrowNotFound(id);
+        ClientEntity clientEntity = getLocalClientEntityOrThrowNotFound(id);
         // validate connectionType param by creating enum out of it
         IsAuthentication enumValue = IsAuthentication.valueOf(connectionType);
         auditDataHelper.put(enumValue);
-        clientType.setIsAuthentication(connectionType);
-        return clientType;
+        clientEntity.setIsAuthentication(connectionType);
+        return ClientMapper.get().toTarget(clientEntity);
     }
 
     /**
      * Get a local client, throw exception if not found
      * @throws ClientNotFoundException if not found
      */
-    public ClientType getLocalClientOrThrowNotFound(ClientId id) throws ClientNotFoundException {
-        ClientType clientType = getLocalClient(id);
-        if (clientType == null) {
+    ClientEntity getLocalClientEntityOrThrowNotFound(ClientId id) throws ClientNotFoundException {
+        ClientEntity clientEntity = getLocalClientEntity(id);
+        if (clientEntity == null) {
             throw new ClientNotFoundException("client with id " + id + " not found");
         }
-        return clientType;
+        return clientEntity;
     }
 
     /**
      * @param id
      * @param certBytes either PEM or DER -encoded certificate
-     * @return created CertificateType with id populated
-     * @throws CertificateException              if certBytes was not a valid PEM or DER encoded certificate
+     * @return created Certificate with id populated
+     * @throws CertificateException if certBytes was not a valid PEM or DER encoded certificate
      * @throws CertificateAlreadyExistsException if certificate already exists
-     * @throws ClientNotFoundException           if client was not found
+     * @throws ClientNotFoundException if client was not found
      */
-    public CertificateType addTlsCertificate(ClientId id, byte[] certBytes)
+    public Certificate addTlsCertificate(ClientId id, byte[] certBytes)
             throws CertificateException, CertificateAlreadyExistsException, ClientNotFoundException {
         auditDataHelper.put(id);
         X509Certificate x509Certificate;
@@ -286,25 +305,31 @@ public class ClientService {
             throw new CertificateException("cannot convert bytes to certificate", e);
         }
         String hash = calculateCertHexHash(x509Certificate);
-        CertificateType certificateType = new CertificateType();
+        CertificateEntity certificateEntity = new CertificateEntity();
         try {
-            certificateType.setData(x509Certificate.getEncoded());
+            certificateEntity.setData(x509Certificate.getEncoded());
         } catch (CertificateEncodingException ex) {
             // client cannot do anything about this
             throw new RuntimeException(ex);
         }
-        auditDataHelper.put(certificateType);
+        putCertificateHashToAudit(certificateEntity);
 
-        ClientType clientType = getLocalClientOrThrowNotFound(id);
-        Optional<CertificateType> duplicate = clientType.getIsCert().stream()
+        ClientEntity clientEntity = getLocalClientEntityOrThrowNotFound(id);
+        Optional<CertificateEntity> duplicate = clientEntity.getCertificates().stream()
                 .filter(cert -> hash.equalsIgnoreCase(calculateCertHexHash(cert.getData())))
                 .findFirst();
         if (duplicate.isPresent()) {
             throw new CertificateAlreadyExistsException("certificate already exists");
         }
 
-        clientType.getIsCert().add(certificateType);
-        return certificateType;
+        clientEntity.getCertificates().add(certificateEntity);
+        return CertificateMapper.get().toTarget(certificateEntity);
+    }
+
+    private void putCertificateHashToAudit(CertificateEntity certificateEntity) {
+        if (certificateEntity != null) {
+            auditDataHelper.putCertificateHashAndAlgorithm(certificateEntity.getData());
+        }
     }
 
     /**
@@ -338,23 +363,22 @@ public class ClientService {
      * @throws ClientNotFoundException      if client was not found
      * @throws CertificateNotFoundException if certificate was not found
      */
-    public ClientType deleteTlsCertificate(ClientId id, String certificateHash)
+    public void deleteTlsCertificate(ClientId id, String certificateHash)
             throws ClientNotFoundException, CertificateNotFoundException {
 
         auditDataHelper.put(id);
 
-        ClientType clientType = getLocalClientOrThrowNotFound(id);
-        Optional<CertificateType> certificateType = clientType.getIsCert().stream()
+        ClientEntity clientEntity = getLocalClientEntityOrThrowNotFound(id);
+        Optional<CertificateEntity> certificateEntity = clientEntity.getCertificates().stream()
                 .filter(certificate -> calculateCertHexHash(certificate.getData()).equalsIgnoreCase(certificateHash))
                 .findAny();
-        if (!certificateType.isPresent()) {
+        if (certificateEntity.isEmpty()) {
             throw new CertificateNotFoundException();
         }
 
-        auditDataHelper.put(certificateType.get());
+        putCertificateHashToAudit(certificateEntity.get());
 
-        clientType.getIsCert().remove(certificateType.get());
-        return clientType;
+        clientEntity.getCertificates().remove(certificateEntity.get());
     }
 
     /**
@@ -364,30 +388,31 @@ public class ClientService {
      * @return
      * @throws ClientNotFoundException if client was not found
      */
-    public Optional<CertificateType> getTlsCertificate(ClientId id, String certificateHash)
+    public Optional<Certificate> getTlsCertificate(ClientId id, String certificateHash)
             throws ClientNotFoundException {
-        ClientType clientType = getLocalClientOrThrowNotFound(id);
-        return clientType.getIsCert().stream()
+        ClientEntity clientEntity = getLocalClientEntityOrThrowNotFound(id);
+        return clientEntity.getCertificates().stream()
                 .filter(certificate -> calculateCertHexHash(certificate.getData()).equalsIgnoreCase(certificateHash))
+                .map(certificateEntity -> CertificateMapper.get().toTarget(certificateEntity))
                 .findAny();
     }
 
     /**
      * Find clients in the local serverconf
      */
-    public List<ClientType> findLocalClients(ClientService.SearchParameters searchParameters) {
-        return searchClients(searchParameters, getAllLocalClients());
+    List<ClientEntity> findLocalClientEntities(ClientService.SearchParameters searchParameters) {
+        return searchClientEntities(searchParameters, getAllLocalClientEntities());
     }
 
     /**
      * Find clients in the globalconf
      */
-    public List<ClientType> findGlobalClients(ClientService.SearchParameters searchParameters) {
-        return searchClients(searchParameters, getAllGlobalClients());
+    List<ClientEntity> findGlobalClientEntities(ClientService.SearchParameters searchParameters) {
+        return searchClientEntities(searchParameters, getAllGlobalClientEntities());
     }
 
-    private List<ClientType> searchClients(SearchParameters searchParameters, List<ClientType> allClients) {
-        Predicate<ClientType> matchingSearchTerms = buildClientSearchPredicate(searchParameters);
+    List<ClientEntity> searchClientEntities(SearchParameters searchParameters, List<ClientEntity> allClients) {
+        Predicate<ClientEntity> matchingSearchTerms = buildClientEntitySearchPredicate(searchParameters);
         return allClients.stream()
                 .filter(matchingSearchTerms)
                 .filter(c -> searchParameters.showMembers || c.getIdentifier().getSubsystemCode() != null)
@@ -399,10 +424,10 @@ public class ClientService {
      * @param clientId
      * @return
      */
-    public Optional<ClientType> findByClientId(ClientId clientId) {
-        List<ClientType> localClients = getAllLocalClients();
-        List<ClientType> globalClients = getAllGlobalClients();
-        List<ClientType> distinctClients = mergeClientListsDistinctively(globalClients, localClients);
+    Optional<ClientEntity> findEntityByClientId(ClientId clientId) {
+        List<ClientEntity> localClients = getAllLocalClientEntities();
+        List<ClientEntity> globalClients = getAllGlobalClientEntities();
+        List<ClientEntity> distinctClients = mergeClientEntitiesDistinctively(globalClients, localClients);
         return distinctClients.stream()
                 .filter(clientType -> clientType.getIdentifier().toShortString().trim()
                         .equals(clientId.toShortString().trim()))
@@ -412,18 +437,18 @@ public class ClientService {
     /**
      * Find from all clients (local or global)
      */
-    public List<ClientType> findClients(ClientService.SearchParameters searchParameters) {
-        List<ClientType> localClients = findLocalClients(searchParameters);
+    public List<Client> findClients(ClientService.SearchParameters searchParameters) {
+        List<ClientEntity> localClients = findLocalClientEntities(searchParameters);
         if (searchParameters.internalSearch) {
-            return localClients;
+            return ClientMapper.get().toTargets(localClients);
         }
 
-        List<ClientType> globalClients = findGlobalClients(searchParameters);
+        List<ClientEntity> globalClients = findGlobalClientEntities(searchParameters);
         if (searchParameters.excludeLocal) {
             return subtractLocalFromGlobalClients(globalClients, localClients);
         }
 
-        return mergeClientListsDistinctively(globalClients, localClients);
+        return ClientMapper.get().toTargets(mergeClientEntitiesDistinctively(globalClients, localClients));
     }
 
     /**
@@ -432,14 +457,16 @@ public class ClientService {
      * @param localClients
      * @return
      */
-    private List<ClientType> subtractLocalFromGlobalClients(List<ClientType> globalClients,
-                                                            List<ClientType> localClients) {
+    private List<Client> subtractLocalFromGlobalClients(List<ClientEntity> globalClients,
+                                                        List<ClientEntity> localClients) {
         List<String> localClientIds = localClients.stream().map(localClient ->
                 localClient.getIdentifier().toShortString()).collect(Collectors.toList());
 
-        return globalClients.stream()
+        return ClientMapper.get().toTargets(
+                globalClients.stream()
                 .filter(globalClient -> !localClientIds.contains(globalClient.getIdentifier().toShortString()))
-                .collect(Collectors.toList());
+                .toList()
+        );
     }
 
     /**
@@ -465,7 +492,7 @@ public class ClientService {
 
         auditDataHelper.put(clientId);
 
-        ClientType client = getLocalClientOrThrowNotFound(clientId);
+        ClientEntity client = getLocalClientEntityOrThrowNotFound(clientId);
 
         String instanceIdentifier = client.getIdentifier().getXRoadInstance();
         if (!instanceIdentifier.equals(globalConfProvider.getInstanceIdentifier())) {
@@ -477,22 +504,30 @@ public class ClientService {
             throw new InvalidMemberClassException(INVALID_MEMBER_CLASS + memberClass);
         }
 
-        ClientId.Conf ownerId = currentSecurityServerId.getServerId().getOwner();
+        ClientIdEntity ownerId = getCurrentSecurityServerOwnerIdEntity();
         if (ownerId.equals(client.getIdentifier())) {
             throw new CannotRegisterOwnerException();
         }
-        if (!client.getClientStatus().equals(ClientType.STATUS_SAVED)) {
+        if (!client.getClientStatus().equals(Client.STATUS_SAVED)) {
             throw new ActionNotPossibleException("Only clients with status 'saved' can be registered");
         }
         try {
             Integer requestId = managementRequestSenderService.sendClientRegisterRequest(clientId, subsystemName);
             subsystemNameStatus.submit(clientId);
-            client.setClientStatus(ClientType.STATUS_REGINPROG);
-            auditDataHelper.putClientStatus(client);
+            client.setClientStatus(Client.STATUS_REGINPROG);
+            putClientStatusToAudit(client);
             auditDataHelper.putManagementRequestId(requestId);
         } catch (ManagementRequestSendingFailedException e) {
             throw new DeviationAwareRuntimeException(e, e.getErrorDeviation());
         }
+    }
+
+    private void putClientStatusToAudit(ClientEntity clientEntity) {
+        auditDataHelper.putClientStatus(clientEntity != null ? clientEntity.getClientStatus() : null);
+    }
+
+    private ClientIdEntity getCurrentSecurityServerOwnerIdEntity() {
+        return XRoadIdMapper.get().toEntity(currentSecurityServerId.getServerId().getOwner());
     }
 
     /**
@@ -508,7 +543,7 @@ public class ClientService {
 
         auditDataHelper.put(clientId);
 
-        ClientType client = getLocalClientOrThrowNotFound(clientId);
+        ClientEntity client = getLocalClientEntityOrThrowNotFound(clientId);
         List<String> allowedStatuses = Arrays.asList(STATUS_REGISTERED, STATUS_REGINPROG, STATUS_DISABLED);
         if (!allowedStatuses.contains(client.getClientStatus())) {
             throw new ActionNotPossibleException("cannot unregister client with status " + client.getClientStatus());
@@ -519,7 +554,7 @@ public class ClientService {
         }
         try {
             Integer requestId = managementRequestSenderService.sendClientUnregisterRequest(clientId);
-            auditDataHelper.putClientStatus(client);
+            putClientStatusToAudit(client);
             auditDataHelper.putManagementRequestId(requestId);
             client.setClientStatus(STATUS_DELINPROG);
         } catch (ManagementRequestSendingFailedException e) {
@@ -545,9 +580,9 @@ public class ClientService {
         ClientId.Conf clientId =
                 ClientId.Conf.create(globalConfProvider.getInstanceIdentifier(), memberClass, memberCode);
         auditDataHelper.put(clientId);
-        ClientType client = getLocalClientOrThrowNotFound(clientId);
-        auditDataHelper.putClientStatus(client);
-        ClientId.Conf ownerId = currentSecurityServerId.getServerId().getOwner();
+        ClientEntity client = getLocalClientEntityOrThrowNotFound(clientId);
+        putClientStatusToAudit(client);
+        ClientIdEntity ownerId = getCurrentSecurityServerOwnerIdEntity();
         if (ownerId.equals(client.getIdentifier())) {
             throw new MemberAlreadyOwnerException();
         }
@@ -575,13 +610,13 @@ public class ClientService {
 
         auditDataHelper.put(clientId);
 
-        ClientType client = getLocalClientOrThrowNotFound(clientId);
+        ClientEntity client = getLocalClientEntityOrThrowNotFound(clientId);
         if (!STATUS_REGISTERED.equals(client.getClientStatus())) {
             throw new ActionNotPossibleException("cannot disable client with status " + client.getClientStatus());
         }
         try {
             Integer requestId = managementRequestSenderService.sendClientDisableRequest(clientId);
-            auditDataHelper.putClientStatus(client);
+            putClientStatusToAudit(client);
             auditDataHelper.putManagementRequestId(requestId);
             client.setClientStatus(STATUS_DISABLING_INPROG);
         } catch (ManagementRequestSendingFailedException e) {
@@ -601,13 +636,13 @@ public class ClientService {
 
         auditDataHelper.put(clientId);
 
-        ClientType client = getLocalClientOrThrowNotFound(clientId);
+        ClientEntity client = getLocalClientEntityOrThrowNotFound(clientId);
         if (!STATUS_DISABLED.equals(client.getClientStatus())) {
             throw new ActionNotPossibleException("cannot enable client with status " + client.getClientStatus());
         }
         try {
             Integer requestId = managementRequestSenderService.sendClientEnableRequest(clientId);
-            auditDataHelper.putClientStatus(client);
+            putClientStatusToAudit(client);
             auditDataHelper.putManagementRequestId(requestId);
             client.setClientStatus(STATUS_ENABLING_INPROG);
         } catch (ManagementRequestSendingFailedException e) {
@@ -623,8 +658,8 @@ public class ClientService {
      * @param moreClients list of clients (these will override the ones in {@code clients} in the case of duplicates)
      * @return
      */
-    private List<ClientType> mergeClientListsDistinctively(List<ClientType> clients, List<ClientType> moreClients) {
-        Map<String, ClientType> uniqueClientMap = new HashMap<>();
+    private List<ClientEntity> mergeClientEntitiesDistinctively(List<ClientEntity> clients, List<ClientEntity> moreClients) {
+        Map<String, ClientEntity> uniqueClientMap = new HashMap<>();
         // add clients into the HashMap with client identifier string as the key
         clients.forEach(clientType -> uniqueClientMap.put(clientType.getIdentifier().toShortString(), clientType));
         /*
@@ -635,8 +670,8 @@ public class ClientService {
         return new ArrayList<>(uniqueClientMap.values());
     }
 
-    private Predicate<ClientType> buildClientSearchPredicate(ClientService.SearchParameters searchParameters) {
-        Predicate<ClientType> clientTypePredicate = clientType -> true;
+    private Predicate<ClientEntity> buildClientEntitySearchPredicate(ClientService.SearchParameters searchParameters) {
+        Predicate<ClientEntity> clientTypePredicate = clientType -> true;
         if (!StringUtils.isEmpty(searchParameters.name)) {
             clientTypePredicate = clientTypePredicate
                     .and(ct -> {
@@ -671,13 +706,12 @@ public class ClientService {
 
     /**
      * Check whether client has valid local sign cert
-     * @param clientType
-     * @return
+     * @param clientEntity clientEntity
+     * @return boolean
      */
-    private boolean hasValidLocalSignCertCheck(ClientType clientType) {
-        List<CertificateInfo> signCertificateInfos = currentSecurityServerSignCertificates
-                .getSignCertificateInfos();
-        return ClientUtils.hasValidLocalSignCert(clientType.getIdentifier(), signCertificateInfos);
+    private boolean hasValidLocalSignCertCheck(ClientEntity clientEntity) {
+        List<CertificateInfo> signCertificateInfos = currentSecurityServerSignCertificates.getSignCertificateInfos();
+        return ClientUtils.hasValidLocalSignCert(clientEntity.getIdentifier(), signCertificateInfos);
     }
 
     /**
@@ -708,14 +742,26 @@ public class ClientService {
      * @throws InvalidMemberClassException            if client has an invalid member class, meaning that the
      *                                                member class that is not defined in this instance's configuration
      */
-
-    public ClientType addLocalClient(String memberClass,
-                                     String memberCode,
-                                     String subsystemCode,
-                                     String subsystemName,
-                                     IsAuthentication isAuthentication,
-                                     boolean ignoreWarnings) throws ClientAlreadyExistsException, AdditionalMemberAlreadyExistsException,
+    public Client addLocalClient(String memberClass,
+                                 String memberCode,
+                                 String subsystemCode,
+                                 String subsystemName,
+                                 IsAuthentication isAuthentication,
+                                 boolean ignoreWarnings) throws ClientAlreadyExistsException, AdditionalMemberAlreadyExistsException,
                                                                     UnhandledWarningsException, InvalidMemberClassException {
+
+        return ClientMapper.get().toTarget(
+                addLocalClientEntity(memberClass, memberCode, subsystemCode, subsystemName, isAuthentication, ignoreWarnings));
+    }
+
+
+    public ClientEntity addLocalClientEntity(String memberClass,
+                                             String memberCode,
+                                             String subsystemCode,
+                                             String subsystemName,
+                                             IsAuthentication isAuthentication,
+                                             boolean ignoreWarnings) throws ClientAlreadyExistsException,
+            AdditionalMemberAlreadyExistsException, UnhandledWarningsException, InvalidMemberClassException {
 
         if (!isValidMemberClass(memberClass)) {
             throw new InvalidMemberClassException(INVALID_MEMBER_CLASS + memberClass);
@@ -729,15 +775,15 @@ public class ClientService {
         auditDataHelper.put(clientId);
         auditDataHelper.put(isAuthentication);
 
-        ClientType existingLocalClient = getLocalClient(clientId);
-        ClientId ownerId = currentSecurityServerId.getServerId().getOwner();
+        ClientEntity existingLocalClient = getLocalClientEntity(clientId);
+        ClientIdEntity ownerId = getCurrentSecurityServerOwnerIdEntity();
         if (existingLocalClient != null) {
             throw new ClientAlreadyExistsException("client " + clientId + " already exists");
         }
         if (clientId.getSubsystemCode() == null) {
             // adding member - check that we dont already have owner + one additional member
-            List<ClientType> existingMembers = getAllLocalMembers();
-            Optional<ClientType> additionalMember = existingMembers.stream()
+            List<ClientEntity> existingMembers = getAllLocalMemberEntities();
+            Optional<ClientEntity> additionalMember = existingMembers.stream()
                     .filter(m -> !ownerId.equals(m.getIdentifier()))
                     .findFirst();
             if (additionalMember.isPresent()) {
@@ -757,21 +803,21 @@ public class ClientService {
         }
 
         boolean clientRegistered = globalConfService.isSecurityServerClientForThisInstance(clientId);
-        ClientType client = new ClientType();
+        ClientEntity client = new ClientEntity();
         client.setIdentifier(getPossiblyManagedEntity(clientId));
         if (clientRegistered) {
-            client.setClientStatus(ClientType.STATUS_REGISTERED);
+            client.setClientStatus(Client.STATUS_REGISTERED);
         } else {
-            client.setClientStatus(ClientType.STATUS_SAVED);
+            client.setClientStatus(Client.STATUS_SAVED);
         }
-        auditDataHelper.putClientStatus(client);
+        putClientStatusToAudit(client);
 
         client.setIsAuthentication(isAuthentication.name());
-        ServerConfType serverConfType = serverConfService.getServerConf();
-        client.setConf(serverConfType);
-        serverConfType.getClient().add(client);
+        ServerConfEntity serverConfEntity = serverConfService.getServerConfEntity();
+        client.setConf(serverConfEntity);
+        serverConfEntity.getClients().add(client);
 
-        ClientType persisted = clientRepository.persist(client);
+        ClientEntity persisted = clientRepository.persist(client);
         if (clientId.isSubsystem() && StringUtils.isNotEmpty(subsystemName)) {
             subsystemNameStatus.set(clientId, globalConfProvider.getSubsystemName(clientId), subsystemName);
         }
@@ -793,12 +839,12 @@ public class ClientService {
      * If ClientId already exists in DB, return the managed instance.
      * Otherwise return transient instance that was given as parameter
      */
-    public ClientId.Conf getPossiblyManagedEntity(ClientId.Conf transientClientId) {
-        ClientId.Conf managedEntity = identifierRepository.getClientId(transientClientId);
+    private ClientIdEntity getPossiblyManagedEntity(ClientId.Conf transientClientId) {
+        ClientIdEntity managedEntity = identifierRepository.getClientId(transientClientId);
         if (managedEntity != null) {
             return managedEntity;
         } else {
-            return transientClientId;
+            return XRoadIdMapper.get().toEntity(transientClientId);
         }
     }
 
@@ -814,30 +860,30 @@ public class ClientService {
 
         auditDataHelper.put(clientId);
 
-        ClientType clientType = getLocalClientOrThrowNotFound(clientId);
+        ClientEntity clientEntity = getLocalClientEntityOrThrowNotFound(clientId);
         // cant delete owner
-        ClientId ownerId = currentSecurityServerId.getServerId().getOwner();
-        if (ownerId.equals(clientType.getIdentifier())) {
+        ClientIdEntity ownerId = getCurrentSecurityServerOwnerIdEntity();
+        if (ownerId.equals(clientEntity.getIdentifier())) {
             throw new CannotDeleteOwnerException();
         }
         // cant delete with statuses STATUS_REGINPROG and STATUS_REGISTERED
         Set<String> allowedStatuses = Set.of(STATUS_SAVED, STATUS_DELINPROG, STATUS_GLOBALERR);
-        if (!allowedStatuses.contains(clientType.getClientStatus())) {
-            throw new ActionNotPossibleException("cannot delete client with status " + clientType.getClientStatus());
+        if (!allowedStatuses.contains(clientEntity.getClientStatus())) {
+            throw new ActionNotPossibleException("cannot delete client with status " + clientEntity.getClientStatus());
         }
         // we also remove local group members and access rights what is given to this client
-        localGroupRepository.deleteGroupMembersByMemberId(clientType.getIdentifier());
-        accessRightRepository.deleteBySubjectId(clientType.getIdentifier());
-        removeLocalClient(clientType);
+        localGroupRepository.deleteGroupMembersByMemberId(clientEntity.getIdentifier());
+        accessRightRepository.deleteBySubjectId(clientEntity.getIdentifier());
+        removeLocalClient(clientEntity);
         subsystemNameStatus.clear(clientId);
     }
 
-    private void removeLocalClient(ClientType clientType) {
-        ServerConfType serverConfType = serverConfService.getServerConf();
-        if (!serverConfType.getClient().remove(clientType)) {
+    private void removeLocalClient(ClientEntity clientEntity) {
+        ServerConfEntity serverConfEntity = serverConfService.getServerConfEntity();
+        if (!serverConfEntity.getClients().remove(clientEntity)) {
             throw new RuntimeException("client to be deleted was somehow missing from server conf");
         }
-        identifierRepository.remove(clientType.getIdentifier());
+        identifierRepository.remove(clientEntity.getIdentifier());
     }
 
     public void renameClient(ClientId.Conf clientId, String subsystemName)
@@ -851,7 +897,7 @@ public class ClientService {
         auditDataHelper.put(clientId);
         auditDataHelper.put(MEMBER_SUBSYSTEM_NAME, subsystemName);
 
-        ClientType client = getLocalClientOrThrowNotFound(clientId);
+        ClientEntity client = getLocalClientEntityOrThrowNotFound(clientId);
 
         if (!client.getIdentifier().isSubsystem()) {
             throw new ActionNotPossibleException("Only subsystem can be renamed.");
